bases/rancher/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:
    - web
    - websecure
  tls:
      certResolver: rancher
      domains:
        - main: rancher.127-0-0-1.nip.io
  routes:
    - kind: Rule
      match: Host(`rancher.127-0-0-1.nip.io`)
      services:
        - name: rancher
          port: 80
